docs/istio/manifests/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  replicas: 1
  serviceName: keycloak-headless
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.0.7
          command:
            - /bin/bash
            - -cxe
            - |
              cp /host/target/keycloak-client-cert-lookup-for-envoy-*.jar /opt/keycloak/providers/keycloak-client-cert-lookup-for-envoy.jar
              /opt/keycloak/bin/kc.sh import --file /host/src/test/resources/integration-test/keycloak-realm.json
              /opt/keycloak/bin/kc.sh start \
                --spi-x509cert-lookup-provider=envoy \
                --log-level=INFO,io.github.nordix.keycloak.services.x509:debug
          volumeMounts:
            - name: host
              mountPath: /host
              readOnly: true

      volumes:
        - name: host
          hostPath:
            path: /host
